--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,7 @@ jobs:
       - python/install-deps
       - python/save-cache
       - run:
-          command: pytest test/NodeTest.py -v --junitxml=test-results/NodeTest/results.xml
+          command: python -m pytest test/NodeTest.py -v --junitxml=test-results/NodeTest/results.xml
           name: NodeTest
       - store_test_results:
           path: test-results
