--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,12 @@ jobs:
       - run:
           command: python -m pytest test/NodeTest.py -v --junitxml=test-results/NodeTest/results.xml
           name: NodeTest
+      - run:
+          command: python -m pytest test/LinkedListTest.py -v --junitxml=test-results/LinkedListTest/results.xml
+          name: LinkedListTest
+      - run:
+          command: python -m pytest test/CircularLinkedListTest.py -v --junitxml=test-results/CircularLinkedListTest/results.xml
+          name: CircularLinkedListTest
       - store_test_results:
           path: test-results
 
