Implementação de testes de pilha
Atividade 06 da disciplina: Utilizando as mesmas lógicas das listas encadeadas, implementar uma pilha, utilizando as definições dessa estrutura de dados

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,9 @@ jobs:
       - run:
           command: python -m pytest test/CircularLinkedListTest.py -v --junitxml=test-results/CircularLinkedListTest/results.xml
           name: CircularLinkedListTest
+      - run:
+          command: python -m pytest test/PilhaTest.py -v --junitxml=test-results/PilhaTest/results.xml
+          name: PilhaTest
       - store_test_results:
           path: test-results
 
